resources/clusters/production/rhobsp01ue1/alertmanager/bundle/05-alertmanager-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-devshiftnet-dns
  labels:
    app.kubernetes.io/component: alertmanager
    app.kubernetes.io/instance: observatorium
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: observatorium
    app.kubernetes.io/version: v4.15
  name: alertmanager
  namespace: rhobs-production
spec:
  host: ""
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: alertmanager
    weight: null
status:
  ingress: null
